# namer

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-03-namer-refactor-design.md
references/: diamond-framework.md  morphemes.md  sound-symbolism.md
scripts/: fileio.py  filter.py  generate.py  output.py  progress.py  shortlist.py  websearch_gate.py
scripts/search/: __init__.py  detect.py  providers.py  signals.py
tests/: test_filter.py  test_generate.py  test_integration.py  test_io.py  test_progress.py  test_shortlist.py  test_websearch_gate.py
